# Military_Drones

./: .gitignore  README.md
military_drones_bringup/: CMakeLists.txt  package.xml
military_drones_bringup/config/: X3.rviz  military_drones_bridge.yaml
military_drones_bringup/launch/: military_drones.launch.py
military_drones_control/: package.xml  setup.cfg  setup.py
military_drones_control/military_drones_control/: central_planner.py  drone_gui.py  flight_controller.py  object_recognizer.py
military_drones_description/: CMakeLists.txt  package.xml
military_drones_description/models/X3_1/: model.config  model.sdf
military_drones_description/models/X3_2/: model.config  model.sdf
military_drones_description/models/X3_3/: model.config  model.sdf
military_drones_description/models/banana/: banana.sdf  model.config
military_drones_description/models/car/: car.sdf  model.config
military_drones_description/models/horse/: horse.sdf  model.config
military_drones_description/models/man/: man.sdf  model.config
military_drones_description/models/pot/: model.config  pot.sdf
military_drones_description/models/zebra/: model.config  zebra.sdf
military_drones_gazebo/: CMakeLists.txt  package.xml
military_drones_gazebo/include/military_drones_gazebo/: BasicSystem.hh  FullSystem.hh
military_drones_gazebo/src/: BasicSystem.cc  FullSystem.cc
military_drones_gazebo/worlds/: world.sdf
